winows scrollbar fix

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,21 @@ html,
 body {
   height: 100vh;
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
+  overflow-y: overlay;
+}
+
+body::-webkit-scrollbar {
+  width: 0.6em;
+}
+ 
+body::-webkit-scrollbar-track {
+ background-color: transparent;
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: #000000;
+  border-radius: 5px;
 }
 
 #loader {
